--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+awslogs==0.11.0
 boto3==1.9.191
 botocore==1.12.191
 colorama==0.4.1
@@ -8,4 +9,5 @@ python-json-logger==0.1.11
 s3transfer==0.2.1
 six==1.12.0
 structlog==19.1.0
+termcolor==1.1.0
 urllib3==1.25.3
